syntax = "proto3";

package products;

// import "proto/common.proto";
// import "proto/products/categories.proto";
// import "proto/products/manufacturers.proto";

import "../common.proto";
import "./categories.proto";
import "./manufacturers.proto";

service ProductsService {
    rpc Create(CreateProductDto) returns (Product) {}
    rpc FindOne(FindOneProductDto) returns (Product) {}
    rpc FindByIds(FindByIdsDto) returns (Products) {}
    rpc FindAll(common.Empty) returns (Products) {}
    rpc Update(UpdateProductDto) returns (Product) {}
    rpc Remove(RemoveProductDto) returns (common.Empty) {}
    rpc PermanentlyRemove(PermanentlyRemoveProductDto) returns (common.Empty) {}
}

message CreateProductDto {
    string name = 1;
    string description = 2;
    string category_id = 3;
    repeated string tags = 4;
    string manufacturer_id = 5;
    repeated ProductAttribute attributes = 6;
    string image_url = 7;
}

message FindOneProductDto {
    string id = 1;
}

message FindByIdsDto {
    repeated string ids = 1;
}

message UpdateProductDto {
    string id = 1;
    string name = 2;
    string description = 3;
    string category_id = 4;
    repeated string tags = 5;
    string manufacturer_id = 6;
    repeated ProductAttribute attributes = 7;
    string image_url = 8;
}

message RemoveProductDto {
    string id = 1;
}

message PermanentlyRemoveProductDto {
    string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    Category category = 4;
    repeated string tags = 5;
    Manufacturer manufacturer = 6;
    repeated ProductAttribute attributes = 7;
    string image_url = 8;
}

message Products {
    int32 count = 1;
    repeated Product products = 2;
}

message ProductAttribute {
    string key = 1;
    string value = 2;
}